<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/Blue"
    tools:context="top_frag">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        tools:context="top_row">


        <ImageView
            android:id="@+id/search_btn"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:src="@drawable/searchicon"
            android:contentDescription="@string/search_icon" />


        <EditText
            android:id="@+id/searchTextView"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="7"
            android:hint="@string/search"
            android:imeOptions="actionSearch"
            android:singleLine="true"
            android:inputType="text"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:background="@color/white"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_gravity="start"
            android:layout_marginEnd="16dp"
            android:autofillHints="" />

    </LinearLayout>

    <!-- Tab Icons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp"
        >

        <androidx.cardview.widget.CardView
            android:id="@+id/addbtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            app:cardElevation="50dp"
            app:cardBackgroundColor="@color/Yellow"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">


                <!-- Tab 1 Icon -->
                <ImageView
                    android:id="@+id/add_icon"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/plus"
                    android:layout_gravity="center"
                    android:contentDescription=""
                    />

                <TextView
                    android:id="@+id/add_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_res"
                    android:textSize="28sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="2dp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>


</LinearLayout>